item details page screen alignment issue

--- a/src/pages/enter-patient-details/enter-patient-details.scss
+++ b/src/pages/enter-patient-details/enter-patient-details.scss
@@ -33,9 +33,9 @@ page-enter-patient-details {
         .margin-14{
             margin:14px 0px 0px 14px !important;
         }
-        .margin-note{
-            margin:29px 14px 0px 14px
-        }
+        // .margin-note{
+        //     margin:29px 14px 0px 14px
+        // }
         .fontsize-1{
             font-size: 1.6em !important;
         }
